# bigbox

./: .env  .flake8  Dockerfile  README.md  app.json  entrypoint.sh  manage.py  pyproject.toml
bigbox/: settings.py  urls.py  wsgi.py
bigbox/core/: admin.py  apps.py  filtersets.py  models.py  paginations.py  serializers.py  urls.py  views.py
bigbox/core/migrations/: 0001_initial.py  0002_auto_20211016_2247.py  0002_category_order.py  0003_auto_20211020_1150.py  0003_remove_reason_order.py
config/: urls.py  wsgi.py
config/settings/: base.py  production.py
