[tool.poetry]
name = "bigBox"
version = "0.1.0"
description = ""
authors = ["tapiaw38 <tapiaw38@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-isort = "^4.1.1"
flake8-black = "^0.2.3"
flake8-django = "^1.1.2"
flake8-simplify = "^0.14.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
